2003-10-29  Pavel Roskin  <proski@gnu.org>

	* configure.in: Rewrite check for mmap() to avoid using internal
	variables of Autoconf.  Rename the rest of ac_cv_* to mc_cv_*.

	* configure.in: Use AC_CHECK_MEMBERS to check fields of struct
	stat.  Adjust all dependencies.

	* acinclude.m4 (AC_STRUCT_LINGER): Remove, use AC_CHECK_MEMBERS
	instead.

	* configure.in: Define SLANG_POSIX_SIGNALS if all 4 required
	functions are present.  Remove references to extraconf.h.
	* extraconf.h: Eliminate.
	* Makefile.am: Remove extraconf.h.

	* configure.in: Move ext2fs undelete support ...
	* acinclude.m4 (MC_WITH_VFS): ... here.
	* extraconf.h: Remove VFS logic, it's enforced in configure now.

	* acinclude.m4 (MC_WITH_VFS): Use AC_SEARCH_LIBS when possible.
	Allow disabling network code by --disable-netcode.

2003-10-28  Pavel Roskin  <proski@gnu.org>

	* configure.in: Don't check if "file" can use stdin - it's
	unused now.

2003-10-25  Pavel Roskin  <proski@gnu.org>

	* extraconf.h: Don't define HAVE_GRANTPT forcedly if grantpt()
	wasn't found.  Don't define HAVE_CRYPT, it's unused now.

	* configure.in: Remove check for socketpair().  Add new option
	--enable-background.
	* extraconf.h: Don't define WITH_BACKGROUND.

2003-10-14  Pavel Roskin  <proski@gnu.org>

	* configure.in: Don't check for seekdir() and telldir().

2003-09-23  Pavel Roskin  <proski@gnu.org>

	* doc/sr/Makefile.am: Don't install mcserv documentation if mcfs
	support is disabled.

	* lib/*.ti: Remove, these files are obsolete.
	* lib/tdiff: Likewise.
	* lib/xterm.tcap: Likewise.
	* lib/Makefile.am: Remove obsolete files.  Don't install
	README.xterm and xterm.ad, there are partly obsolete and can
	break things if used as is.

2003-09-22  Strahinya Radich  <mr99164@alas.matf.bg.ac.yu>

	* lib/mc.hint.sr: Updated.
	* lib/mc.menu.sr: New file - translated menu.
	* lib/Makefile.am: Add mc.menu.sr.
	* doc/sr/: New Serbian documentation.
	* doc/Makefile.am: Add "sr" directory.